<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/menu_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:clickable="false">

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvStatusText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/unfinished_game"
            android:textColor="@color/black"
            android:textSize="36sp" />

        <Button
            android:id="@+id/btnYes"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/bg_menu_button"
            android:includeFontPadding="false"
            android:text="@string/yes"
            android:textAllCaps="false"
            android:textSize="36sp"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnNo"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_menu_button"
            android:includeFontPadding="false"
            android:text="@string/no"
            android:textAllCaps="false"
            android:textSize="36sp"
            android:textColor="@color/white" />

    </LinearLayout>


</FrameLayout>