<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/menu_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <com.tikhomirov.ticktacktoe.field.FieldView
        android:id="@+id/field"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:elevation="8dp"
        app:fieldSize="3"
        app:layout_constraintBottom_toTopOf="@+id/tvField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:includeFontPadding="false"
        android:text="@string/field"
        android:textColor="@color/black"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@id/tvFieldSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvFieldSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="4x4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnAi"
        android:layout_marginBottom="8dp"
        android:textSize="28sp"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/btnMinus"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/bg_menu_button"
        android:includeFontPadding="false"
        android:text="@string/minus"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvFieldSize"
        app:layout_constraintEnd_toStartOf="@+id/tvField"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="@+id/tvField"/>

    <Button
        android:id="@+id/btnPlus"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/bg_menu_button"
        android:includeFontPadding="false"
        android:text="@string/plus"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvFieldSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvField"
        app:layout_constraintTop_toTopOf="@+id/tvField" />

    <Button
        android:id="@+id/btnAi"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_menu_button"
        android:includeFontPadding="false"
        android:text="@string/play_with_ai"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/btnStats"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnStats"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_menu_button"
        android:includeFontPadding="false"
        android:text="@string/stats"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>